--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
@@ -29,8 +30,8 @@ jobs:
       - name: Build & push API
         uses: docker/build-push-action@v6
         with:
-          context: .                           # 👈 monorepo root
-          file: apps/api/Dockerfile      # 👈 path to your API Dockerfile
+          context: ./apps/api            # 👈 build context = app folder
+          file: ./apps/api/Dockerfile    # 👈 or just "Dockerfile" if it lives there
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/api:latest
@@ -39,8 +40,8 @@ jobs:
       - name: Build & push Web
         uses: docker/build-push-action@v6
         with:
-          context: .                           # 👈 monorepo root
-          file: apps/web/Dockerfile      # 👈 path to your Web Dockerfile
+          context: ./apps/web            # 👈 build context = app folder
+          file: ./apps/web/Dockerfile    # 👈 or just "Dockerfile" if it lives there
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/web:latest
