edit api docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,12 @@
-node_modules
-npm-debug.log
-dist
-.next
-.env
 .git
-.DS_Store
+**/node_modules
+**/dist
+**/.next
+**/out
+**/.turbo
+**/.vercel
+*.log
+.env
+.env*.local
+Dockerfile
+.dockerignore
