--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,17 +1,28 @@
+# apps/api/Dockerfile
 FROM node:20-alpine
-WORKDIR /app
+
 RUN apk add --no-cache libc6-compat openssl
-COPY package*.json ./
-# Either:
-# RUN npm install
-# Or (deterministic inside the build, but lockfile isn't committed):
-RUN npm install --package-lock-only && npm ci
-COPY . .
+
+# Work inside the API app so ./prisma/schema.prisma resolves
+WORKDIR /app/apps/api
+
+# Copy only the app's manifests first
+COPY apps/api/package*.json ./
+
+# Install deps (includes dev deps so we can build)
+RUN npm ci
+
+# Copy only what's needed for build (or copy the whole repo if required)
+COPY apps/api ./
+
+# Prisma schema now at ./prisma/schema.prisma
 RUN npx prisma generate
+
+# Build Nest app
 RUN npm run build
+
 ENV NODE_ENV=production
 ENV PORT=4000
+
 EXPOSE 4000
 CMD ["node","dist/main.js"]
-
-
