--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,28 +1,32 @@
 # apps/api/Dockerfile
 FROM node:20-alpine
 
+# System deps for Prisma on Alpine
 RUN apk add --no-cache libc6-compat openssl
 
-# Work inside the API app so ./prisma/schema.prisma resolves
-WORKDIR /app/apps/api
+# Work from repo root inside container
+WORKDIR /app
 
-# Copy only the app's manifests first
-COPY apps/api/package*.json ./
+# 1) Copy ONLY package manifests first (better layer caching)
+COPY package.json package-lock.json ./
+# If your api has its own package.json (likely):
+COPY apps/api/package.json apps/api/package.json
 
-# Install deps (includes dev deps so we can build)
+# 2) Install workspace deps at root (resolves inter-workspace deps correctly)
 RUN npm ci
 
-# Copy only what's needed for build (or copy the whole repo if required)
-COPY apps/api ./
+# 3) Copy the whole repo (now that deps are cached)
+COPY . .
 
-# Prisma schema now at ./prisma/schema.prisma
-RUN npx prisma generate
+# 4) Generate Prisma client using the correct schema path
+RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# Build Nest app
-RUN npm run build
+# 5) Build only the API workspace (adjust if your script name differs)
+RUN npm --workspace apps/api run build
 
 ENV NODE_ENV=production
 ENV PORT=4000
 
 EXPOSE 4000
-CMD ["node","dist/main.js"]
+# If Nest outputs to apps/api/dist/main.js
+CMD ["node", "apps/api/dist/main.js"]
