--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api",
   "private": true,
+   "prisma": { "schema": "prisma/schema.prisma" },
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.build.json && prisma generate",
@@ -35,4 +36,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
+  
+ 
+
 }
