--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,42 +1,41 @@
 # apps/api/Dockerfile
 FROM node:20-alpine AS build
-
-# Needed for Prisma on Alpine
 RUN apk add --no-cache libc6-compat openssl
 
-# Work inside the API app so ./prisma/schema.prisma resolves
-WORKDIR /app/apps/api
+# Work at repo root for workspaces
+WORKDIR /app
 
-# 1) Copy only API manifests first for better layer caching
-COPY apps/api/package*.json ./
+# 1) Copy root + api manifests for better cache
+COPY package.json package-lock.json ./
+COPY apps/api/package.json apps/api/package.json
 
-# 2) Install deps for the API
+# 2) Install all with root lockfile (workspaces)
 RUN npm ci
 
-# 3) Copy the API source (including prisma) from the repo root context
-COPY apps/api ./
+# 3) Copy full repo
+COPY . .
 
-# 4) Generate Prisma client (schema path is now valid)
-RUN npx prisma generate --schema ./prisma/schema.prisma
+# 4) Generate prisma client for API (matching versions now)
+RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# 5) Build Nest app
-RUN npm run build
+# 5) Build API workspace (script already runs prisma generate first, but ok)
+RUN npm --workspace apps/api run build
 
 
-# --- Runtime image (smaller) ---
+# --- Runtime ---
 FROM node:20-alpine
-
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app/apps/api
 
-# Only copy what we need to run
-COPY --from=build /app/apps/api/node_modules ./node_modules
 COPY --from=build /app/apps/api/dist ./dist
 COPY --from=build /app/apps/api/prisma ./prisma
+COPY --from=build /app/package.json /app/package-lock.json /app/
 COPY --from=build /app/apps/api/package*.json ./
+# Use node_modules from build root (workspaces hoisting)
+COPY --from=build /app/node_modules /app/node_modules
 
 ENV NODE_ENV=production
 ENV PORT=4000
-
 EXPOSE 4000
+
 CMD ["node","dist/main.js"]
