--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "next-nest-auth-minio-starter",
   "private": true,
-  "workspaces": [
-    "apps/web",
-    "apps/api"
-  ],
+  "workspaces": ["apps/*"],
   "scripts": {
     "dev:web": "npm --workspace apps/web run dev",
     "dev:api": "npm --workspace apps/api run start:dev",
