--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,41 +1,31 @@
-# apps/api/Dockerfile
 FROM node:20-alpine AS build
 RUN apk add --no-cache libc6-compat openssl
-
-# Work at repo root for workspaces
 WORKDIR /app
 
-# 1) Copy root + api manifests for better cache
+# 1) root manifests + api manifest (for caching)
 COPY package.json package-lock.json ./
 COPY apps/api/package.json apps/api/package.json
 
-# 2) Install all with root lockfile (workspaces)
+# 2) install all workspaces with root lockfile
 RUN npm ci
 
-# 3) Copy full repo
+# 3) copy full repo
 COPY . .
 
-# 4) Generate prisma client for API (matching versions now)
+# 4) prisma client for API
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# 5) Build API workspace (script already runs prisma generate first, but ok)
+# 5) build only API workspace
 RUN npm --workspace apps/api run build
 
-
-# --- Runtime ---
 FROM node:20-alpine
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app/apps/api
-
 COPY --from=build /app/apps/api/dist ./dist
 COPY --from=build /app/apps/api/prisma ./prisma
-COPY --from=build /app/package.json /app/package-lock.json /app/
 COPY --from=build /app/apps/api/package*.json ./
-# Use node_modules from build root (workspaces hoisting)
-COPY --from=build /app/node_modules /app/node_modules
-
+COPY --from=build /app/node_modules ./node_modules
 ENV NODE_ENV=production
 ENV PORT=4000
 EXPOSE 4000
-
 CMD ["node","dist/main.js"]
