--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,9 @@
 {
   "name": "api",
   "private": true,
-  "prisma": { "schema": "prisma/schema.prisma" },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "prisma generate && tsc -p tsconfig.build.json",
@@ -27,6 +29,9 @@
     "rxjs": "7.8.1"
   },
   "devDependencies": {
+    "@nx/eslint": "^21.4.1",
+    "@nx/jest": "^21.4.1",
+    "@nx/node": "^21.4.1",
     "@types/bcrypt": "6.0.0",
     "@types/multer": "1.4.11",
     "@types/node": "20.14.10",
