--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@nx/eslint": "^21.4.1",
+    "@nx/jest": "^21.4.1",
+    "@nx/next": "^21.4.1",
     "@types/node": "^20.14.10",
     "@types/react": "^18.2.79",
     "eslint": "^8.57.0",
