--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "next-nest-auth-minio-starter",
   "private": true,
-  "workspaces": ["apps/*"],
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
     "dev:web": "npm --workspace apps/web run dev",
     "dev:api": "npm --workspace apps/api run start:dev",
@@ -10,14 +12,30 @@
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down -v",
     "migrate:dev": "npm -w apps/api run prisma:migrate:dev",
-    "prisma:studio": "npm -w apps/api run prisma:studio"
+    "prisma:studio": "npm -w apps/api run prisma:studio",
+    "nx": "nx",
+    "affected:build": "nx affected -t build",
+    "affected:lint": "nx affected -t lint",
+    "affected:test": "nx affected -t test"
   },
   "devDependencies": {
+    "@nx/eslint": "^21.4.1",
+    "@nx/jest": "^21.4.1",
+    "@nx/js": "^21.4.1",
+    "@nx/workspace": "^21.4.1",
+    "@types/express": "^5.0.3",
+    "@types/node": "20.14.10",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "concurrently": "8.2.2",
+    "eslint": "^8.57.1",
+    "jest": "^30.1.2",
+    "nx": "^21.4.1",
     "prisma": "5.17.0",
-    "@types/node": "20.14.10"
+    "ts-jest": "^29.4.1"
   },
   "dependencies": {
-    "@prisma/client": "5.17.0"
+    "@prisma/client": "5.17.0",
+    "@types/jest": "^30.0.0"
   }
 }
