--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,19 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "workspaceLayout": { "appsDir": "apps", "libsDir": "libs" },
+  "workspaceLayout": {
+    "appsDir": "apps",
+    "libsDir": "libs"
+  },
   "targetDefaults": {
-    "build": { "cache": true },
-    "lint": { "cache": true },
-    "test": { "cache": true }
-  }
+    "build": {
+      "cache": true
+    },
+    "lint": {
+      "cache": true
+    },
+    "test": {
+      "cache": true
+    }
+  },
+  "nxCloudId": "68b6dfbd5e6eddbc6b58119a"
 }
